--- a/Pair_programming_06_bucles_for.ipynb
+++ b/Pair_programming_06_bucles_for.ipynb
@@ -115,32 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \n",
-      "S\n",
-      "O\n",
-      "C\n",
-      "O\n",
-      "R\n",
-      "R\n",
-      "O\n",
-      ",\n",
-      "A\n",
-      "Q\n",
-      "U\n",
-      "I\n",
-      " \n",
-      "V\n",
-      "A\n",
-      "M\n",
-      "O\n",
-      "S\n"
+      " SOCORRO,AQUI VAMOS\n"
      ]
     }
    ],
@@ -148,7 +130,9 @@
     "cadena_texto = ' SOCORRO,AQUI VAMOS'\n",
     "\n",
     "for caracteres in cadena_texto:\n",
-    "    print(caracteres)"
+    "  cadena_unida= '' ''.join (cadena_texto)\n",
+    "\n",
+    "print (cadena_unida)"
    ]
   },
   {
@@ -300,6 +284,190 @@
     "    break\n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicios _list comprehension\n",
+    "\n",
+    "Generar una lista de los números pares del 1 al 20.\n",
+    "Descripción: Utiliza list comprehension para generar una lista que contenga todos los números pares en el rango del 1 al 20.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La lista de numeros pares es:[2, 4, 6, 8, 10, 12, 14, 16, 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_pares= [num for num in range(1,20) if num % 2 == 0 ]\n",
+    "\n",
+    "print( f'La lista de numeros pares es:{lista_pares}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtener una lista de las vocales en una cadena de texto.\n",
+    "Descripción: Utiliza list comprehension para crear una lista que contenga todas las vocales presentes en una cadena de texto (sin repetición).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La lista de vocales en la frase:  vamos a la playa es: {'a', 'o'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cadena_texto2= ' vamos a la playa'\n",
+    "vocales= 'aeiou'\n",
+    "\n",
+    "# Se utiliza un set ya que no se puede repetir los valores \n",
+    "lista_vocales= {caracter for caracter in cadena_texto2 if caracter in vocales }\n",
+    "\n",
+    "print(f'La lista de vocales en la frase: {cadena_texto2} es: {lista_vocales}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Filtrar los números positivos de una lista y calcular su cuadrado.\n",
+    "Descripción: Utiliza list comprehension para filtrar los números positivos de una lista y calcular el cuadrado de cada uno."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La lista de los numeros positivos al cuadrado es: [1, 4, 9, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_num1= range(-5,5)\n",
+    "\n",
+    "cuadrados_positivos = [num** 2 for num in lista_num1 if num >0]\n",
+    "print(f\"La lista de los numeros positivos al cuadrado es: {cuadrados_positivos}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicios try ...except\n",
+    "\n",
+    "Realizar una búsqueda en una lista y capturar una excepción en caso de valor no encontrado.\n",
+    "Descripción: Solicita al usuario una lista de nombres y un nombre para buscar en la lista. Intenta encontrar el nombre en la lista y utiliza las sentencias try y except para capturar la excepción en caso de que el nombre no sea encontrado."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La lista de tus clientes es['ana, domingo , salo']\n",
+      "Cliente salo\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "try:\n",
+    "    lista_nombres=input('Escribe una lista de nombres de tus clientes').lower().split(',')\n",
+    "    print(f'La lista de tus clientes es{lista_nombres}')\n",
+    "    cliente = (input('Cual cliente quieres verificar')).lower()\n",
+    "    print(f'Cliente {cliente}')\n",
+    "\n",
+    "except ValueError:\n",
+    "    print(\"debe ingresar un número válido\")\n",
+    "    print(f'Revisa si escribiste bien el nombre, este no se ha encontrado')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La lista de tus clientes es['8']\n",
+      "Cliente 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    lista_nombres=[input('Escribe una lista de nombres de tus clientes').lower()]\n",
+    "    print(f'La lista de tus clientes es{lista_nombres}')\n",
+    "    cliente = (input('Cual cliente quieres verificar')).lower()\n",
+    "    print(f'Cliente {cliente}')\n",
+    "\n",
+    "except ValueError:\n",
+    "    print(\"debe ingresar un número válido\")\n",
+    "    print(f'Revisa si escribiste bien el nombre, este no se ha encontrado')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La lista de tus clientes es: ['maria', 'jose', 'luis']\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    # Solicitamos la lista de nombres, separados por comas o espacios\n",
+    "    lista_nombres = input('Escribe una lista de nombres de tus clientes, separados por comas o espacios: ').lower().replace(',', ' ').split()\n",
+    "    \n",
+    "    print(f'La lista de tus clientes es: {lista_nombres}')\n",
+    "    \n",
+    "    # Solicitamos el nombre del cliente a verificar\n",
+    "    cliente = input('¿Cuál cliente quieres verificar? ').lower()\n",
+    "\n",
+    "    \n",
+    "    # Verificamos si el cliente está en la lista\n",
+    "    if cliente not in lista_nombres:\n",
+    "        ValueError(f\"El cliente '{cliente}' no se encuentra en la lista.\")\n",
+    "    else: print(f\"El cliente '{cliente}' está en la lista.\")\n",
+    "\n",
+    "except ValueError:\n",
+    "    print(\"Revisa si escribiste bien el nombre.\")"
    ]
   }
  ],
