actualizacion pair clases

--- a/Pair_programming_07_funciones.ipynb
+++ b/Pair_programming_07_funciones.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -54,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Cantidad de caracteres en el texto: 12\n"
+      " Cantidad de caracteres en el texto: 4\n"
      ]
     }
    ],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -232,15 +232,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "662.0000000000009\n"
+     ]
+    }
+   ],
    "source": [
     "# interes compuesto= capital_inicial * (1 + tasa_interes) ** periodos\n",
     "\n",
     "def calcular_interes_compuesto(capital, tasa, periodos):\n",
-    "    interes_compuesto= capital* (1+tasa) ** periodos\n",
-    "    beneficio_final= capital- interes_compuesto\n",
+    "    interes_compuesto= capital* ((1+tasa) ** periodos)\n",
+    "    # se resta porque el interes compuesto suma al capital, el interes obtenido \n",
+    "    beneficio_final= interes_compuesto - capital\n",
     "\n",
     "    return beneficio_final\n",
     "\n",
@@ -248,7 +257,259 @@
     "tasa1= 0.10\n",
     "periodos1=3\n",
     "\n",
-    "resultado_beneficio_"
+    "resultado_beneficio = calcular_interes_compuesto(capitalinicial,tasa1,periodos1)\n",
+    "\n",
+    "print (resultado_beneficio)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "6. Validar si una palabra es un anagrama de otra.\n",
+    "\n",
+    "Descripción: Crea una función llamada es_anagrama que tome dos palabras como parámetros y devuelva True si una es un anagrama de la otra, o False si no lo es.\n",
+    "¿Qué es un anagrama?."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La amor y roma es un anagrama: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def es_anagrama(palabra1,palabra2):\n",
+    "    # Se debe organizar el orden alfabetico con sorted\n",
+    "\n",
+    "    caracteres_palabra1 = sorted(palabra1)\n",
+    "    caracteres_palabra2 = sorted(palabra2)\n",
+    "    \n",
+    "  \n",
+    "    # Comparar la cadena con su inversa\n",
+    "    if caracteres_palabra1== caracteres_palabra2:\n",
+    "        return True \n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "    # Ejemplo de uso\n",
+    "palabra1 = \"amor\"\n",
+    "palabra2 = \"roma\"\n",
+    "resultado1 = es_anagrama(palabra1, palabra2)\n",
+    "print(f\"La {palabra1} y {palabra2} es un anagrama: {resultado1}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. Validar si una cadena de texto es un isograma.\n",
+    "Descripción: Crea una función llamada es_isograma que tome una cadena de texto como parámetro y devuelva True si es un isograma. En caso contrario, devuelve False.\n",
+    "¿Qué es un isograma? Una palabra que no contiene letras repetidas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La palabra: casa es isograma: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def es_isograma(cadena_iso):\n",
+    "    # los set no admiten elementos duplicados\n",
+    "    set_palabra= set(cadena_iso)\n",
+    "    \n",
+    "    # Tiene que ser un len para analizar una longitud\n",
+    "\n",
+    "    if len(set_palabra) == len(cadena_iso):\n",
+    "        return True \n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "    # Ejemplo de uso\n",
+    "\n",
+    "cadena_iso = \"casa\"\n",
+    "resultado2 = es_isograma(cadena_iso)\n",
+    "print(f\"La palabra: {cadena_iso} es isograma: {resultado2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a', 'c', 's'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set_palabra= set(cadena_iso)\n",
+    "print (set_palabra)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8. Concatenar múltiples cadenas de texto\n",
+    "Descripción: Crea una función llamada concatenar_cadenas que tome una cantidad variable de cadenas de texto como argumentos y devuelva una única cadena que contenga la concatenación de todas las cadenas ingresadas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hoy es jueves estamos estudiando\n"
+     ]
+    }
+   ],
+   "source": [
+    "def concatenar_cadenas(*args) :\n",
+    "    return \" \".join(args)\n",
+    "    #siempre unirlos con join\n",
+    "\n",
+    "# cuando se quiere hacer una cadena con cantidad de argumentos ilimitados se utiliza args\n",
+    "# args- desempaqueta como tupla\n",
+    "\n",
+    "resultado_concatenacion= concatenar_cadenas('hoy es', 'jueves', 'estamos', 'estudiando')\n",
+    "\n",
+    "print( resultado_concatenacion)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "9. Crear un diccionario con información de una persona.\n",
+    "Descripción: Crea una función llamada crear_persona que tome como argumentos clave-valor los datos de una persona, como nombre, edad, ciudad, etc., y devuelva un diccionario con toda la información ingresada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nombre: Maria\n",
+      "edad: 12\n",
+      "ciudad: Madrid\n"
+     ]
+    }
+   ],
+   "source": [
+    "def crear_persona(**kwargs):\n",
+    "    # se utiliza para dar una cantidad de argumentos ilitada o no definida\n",
+    "    #kwargs entrega diccionarios, si queremos conocer sus key-value, debemos utilizar items para llamar a todos\n",
+    "\n",
+    "    for key,value in kwargs.items():\n",
+    "        print (f'{key}: {value}')\n",
+    "\n",
+    "crear_persona (nombre= 'Maria', edad = 12, ciudad = 'Madrid' )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10. Encontrar el número que falta en una lista ordenada de números consecutivos.\n",
+    "Descripción: Crea una función llamada encontrar_numero_faltante que tome una lista de números consecutivos (del 1 al N, sin repetir) con un número faltante y devuelva ese número faltante."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def encontrar_numero_faltante(lista):\n",
+    "\n",
+    "    lista_rango = list(range(1,11))\n",
+    "    numero_faltante = []\n",
+    "    for num in lista_rango:\n",
+    "        # Para que pueda funcionar no puedo guardar la lista despues de un sort ya que no queda un nuevo valor, si no que actua \n",
+    "        # sobre la lista original\n",
+    "        if num not in lista_numeros:\n",
+    "            numero_faltante.append(num)\n",
+    "            return numero_faltante\n",
+    "        \n",
+    "\n",
+    "lista_numeros = [3,1,4,5]\n",
+    "print(encontrar_numero_faltante(lista_numeros))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "11. Encontrar el elemento duplicado en una lista de números.\n",
+    "Descripción: Crea una función llamada encontrar_duplicado que tome una lista de números enteros y devuelva el elemento que está duplicado en la lista."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esta es nuestra lista de numeros duplicados: [1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def encontrar_duplicado(lista_num):\n",
+    "    num_duplicado = []\n",
+    "    contador = {}\n",
+    "    for num in lista_num:\n",
+    "        if num in contador:\n",
+    "            contador [num] += 1\n",
+    "        else:\n",
+    "            contador [num] = 1\n",
+    "    \n",
+    "    for num,count in contador.items():\n",
+    "        if count > 1:\n",
+    "            num_duplicado.append(num)\n",
+    "    return num_duplicado\n",
+    "lista_duplicada = [1,1,1,1,2,2,3,4,5]\n",
+    "print(\"Esta es nuestra lista de numeros duplicados:\", encontrar_duplicado(lista_duplicada)) # en () se mete tus argumentos"
    ]
   }
  ],
